@@ -62,7 +62,7 @@ content =
 content = use Test::More;
 content = use Test::CleanNamespaces;
 content =
-content = namespaces_clean(grep { !/^{{ '{{ $dist->name =~ s/-/::/gr }}' }}::Conflicts$/ } Test::CleanNamespaces->find_modules);
+content = all_namespaces_clean();
 content =
 content = done_testing;
 
